feat: 💫️图片点击放大效果新增

--- a/themes/hugo-theme-stack/layouts/_default/_markup/render-image.html
+++ b/themes/hugo-theme-stack/layouts/_default/_markup/render-image.html
@@ -25,17 +25,10 @@
 	{{- end -}}
 {{- end -}}
 
-<img src="{{ $Permalink }}"
-	{{ with $Width }}width="{{ . }}"{{ end }}
-	{{ with $Height }}height="{{ . }}"{{ end }}
-	{{ with $Srcset }}srcset="{{ . }}"{{ end }}
-	loading="lazy"
-	{{ with $alt }}
-		alt="{{ . }}"
-	{{ end }}
-	{{ if $galleryImage }}
-		class="gallery-image" 
-		data-flex-grow="{{ div (mul $image.Width 100) $image.Height }}"
-		data-flex-basis="{{ div (mul $image.Width 240) $image.Height }}px"
-	{{ end }}
->
+{{if .Page.Site.Params.fancybox }}
+<div class="post-img-view">
+	<a data-fancybox="gallery" href="{{ .Destination | safeURL }}">
+		<img src="{{ .Destination | safeURL }}" alt="{{ .Text }}" {{ with .Title}} title="{{ . }}"{{ end }} />
+	</a>
+</div>
+{{ end }}
